// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainAnyValues > fails when given object contains value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainAnyValues([22m[32mexpected[39m[2m)[22m

Expected object to not contain any of the following values:
  [32mArray [
  \\"baz\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.not.toContainAnyValues > fails when given object contains value 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainAnyValues([22m[32mexpected[39m[2m)[22m

Expected object to not contain any of the following values:
  [32mArray [
  \\"foo\\",
  \\"bar\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.toContainAnyValues > fails when given object does not contain value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAnyValues([22m[32mexpected[39m[2m)[22m

Expected object to contain any of the following values:
  [32mArray [
  \\"fax\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.toContainAnyValues > fails when given object does not contain value 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAnyValues([22m[32mexpected[39m[2m)[22m

Expected object to contain any of the following values:
  [32mArray [
  \\"fax\\",
  \\"rom\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;

exports[`.toContainAnyValues > fails when given object does not contain value 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAnyValues([22m[32mexpected[39m[2m)[22m

Expected object to contain any of the following values:
  [32mArray [
  \\"dae\\",
  \\"mur\\",
  \\"zoe\\",
][39m
Received:
  [31mObject {
  \\"a\\": \\"foo\\",
  \\"b\\": \\"bar\\",
  \\"c\\": \\"baz\\",
}[39m"
`;
